# hello_world

./: CMakeLists.txt  HelloWorldClient.cc  HelloWorldClient.h  HelloWorldClient_impl.cc  HelloWorldClient_impl.h  HelloWorldDaemon.cc  HelloWorldDaemon.h  HelloWorld_Status.h  dbus_service.cc  dbus_service.h  fuck_static.cc  main.cc  readme.md
dbus_bindings/: HelloWorld.conf  dbus-constants.h  dbus-proxies.h  dbus_connection.cc  dbus_connection.h  org.chromium.HelloWorldInterface.dbus-xml  org.chromium.HelloWorldInterface.h  readme.md
proto_bindings/: hello_world.pb.cc  hello_world.pb.h  hello_world.proto  readme.md
